--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,6 +59,12 @@ body {
   margin-top: 28px;
 }
 
+
+.smallimage{
+    height:100px;
+    width:100px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
