--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,24 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="container-fluid">
+    <div class="row">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+        <div infinite-scroll='product.nextPage()' infinite-scroll-disabled='product.busy' infinite-scroll-distance='0'>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+            <div ng-repeat="product in product.items">
+                <div class="col-md-2" style="height:200px;">
+                    <img ng-src="https://styletribute.com/{{product.smallImage}}" class="smallimage">
+                    <p>{{product.designer}}</p>
+                    <p>{{product.name}}</p>
+                    <p>{{product.stylesort}}</p>
+                </div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+            </div>
+
+            <div ng-show='product.busy && product.after <= product.totalPage' class="col-md-2 col-md-offset-5">
+                Loading data...
+            </div>
+            <div ng-show='product.after > product.totalPage' class="col-md-2 col-md-offset-5">End of Products</div>
+        </div>
+
+
+    </div>
 </div>
