Drag and drop feature

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,7 @@
 
 body {
   padding: 0;
+    overflow-x:hidden;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -64,6 +65,7 @@ body {
     height:100px;
     width:100px;
 }
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
